--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "0.1.0",
-  "homepage": "https://Anand99935.github.io/chat-system",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,9 +11,10 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
     "postcss-loader": "^8.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
