--- a/backend/package.json
+++ b/backend/package.json
@@ -8,21 +8,27 @@
     "dev": "nodemon server.js",
     "build": "echo 'No build step required for Node.js'"
   },
-  "keywords": ["chat", "socket.io", "mongodb", "express"],
+  "keywords": [
+    "chat",
+    "socket.io",
+    "mongodb",
+    "express"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "cloudinary": "^1.40.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "socket.io": "^4.7.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "cloudinary": "^1.40.0",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -30,4 +36,4 @@
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
