--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,11 @@
     "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
