--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "classnames": "^2.5.1",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "emoji-mart": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
